# theatrical-player-refactoring-kata

./: README.md  pyproject.toml
src/theatrical_player/: credits.py  invoice.py  money.py  performance.py  play.py  printer.py  statement.py
tests/: conftest.py  test_amount.py  test_credits.py  test_printer.py  test_statement.py
tests/test_files/: invoice_new_plays.json  new_plays.json
