[project]
name = "theatrical-player-refactoring-kata"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dimanu-py", email = "diegomtz126@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
test = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "approvaltests>=12.2.1",
    "pytest-approvaltests>=0.2.4",
]
[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
linter = [
    "black>=24.4.2",
    "mypy>=1.10.1",
]
